<resources>
    <string name="app_name">iDinner</string>
    <string name="fazer_pedido">Fazer Pedido</string>
    <string name="novo_pedido">Novo Pedido</string>
    <string name="informa_es_do_cliente">Informações do Cliente</string>
    <string name="nome">Nome</string>
    <string name="data_de_nascimento">Data de Nascimento</string>
    <string name="g_nero">Gênero</string>
    <string name="pr_ximo">Próximo</string>
    <string name="e_mail">E-mail</string>
    <string name="telefone">Telefone</string>
    <string name="masculino">Masculino</string>
    <string name="feminino">Feminino</string>
    <string name="outro">Outro</string>
    <string name="informa_es_do_pedido">Informações do Pedido</string>
    <string name="card_pio">Cardápio</string>
    <string name="lanches">Lanches</string>
    <string name="pizzas">Pizzas</string>
    <string name="bebidas">Bebidas</string>
    <string name="salgados">Salgados</string>
    <string name="burguer">Burguer</string>
    <string name="seu_pedido">Seu Pedido</string>
    <string name="comanda">---COMANDA---</string>
    <string name="comanda_title">---COMANDA--- TOTAL: R$ 0,00</string>
    <string name="separator">-----</string>
    <string name="cnt">CNT</string>
    <string name="item">ITEM</string>
    <string name="unit">UNIT.</string>
    <string name="total">TOTAL</string>
    <string name="quantidade">Quantidade</string>
    <string name="excluir_tem">Excluir ítem</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="concluir">concluir</string>
    <string name="detalhes_do_pedido">Detalhes do Pedido</string>
    <string name="informa_es_da_entrega">Informações da Entrega</string>
    <string name="retirar_no_local">Retirar no Local</string>
    <string name="entregar_no_meu_local">Entregar no meu Local</string>
    <string name="logradouro">Logradouro</string>
    <string name="cidade">Cidade</string>
    <string name="cep">CEP</string>
    <string name="bairro">Bairro</string>
    <string name="n_mero">Número</string>
    <string name="concluir_pedido">concluir pedido</string>
    <string name="vista">À Vista</string>
    <string name="cart_o_de_d_bito">Cartão de Débito</string>
    <string name="cart_o_de_cr_dito">Cartão de Crédito</string>
    <string name="pix">Pix</string>
    <string name="informa_es_do_pagamento">Informações do Pagamento</string>
    <string name="n_mero_do_cart_o">Número do Cartão</string>
    <string name="m_s_de_validade">Mês de Validade</string>
    <string name="n_verificador">Nº Verificador</string>
    <string name="cpf">CPF</string>
    <string name="ano">Ano</string>
    <string name="m_s">Mês</string>
    <string name="copiar_chave_pix">copiar chave pix</string>
    <string name="info">Aplicativo Desenvolvido pelo Grupo: Firmino Veras, Pedro José, Ivanice Fragoso e Pedro Afonso.</string>
</resources>