<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    tools:ignore="ContentDescription">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_viewpager"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="4dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/informa_es_do_pagamento"
            android:textAlignment="center"
            android:textColor="@color/bg_orange"
            android:textSize="24sp"
            app:drawableTopCompat="@drawable/ic_payment" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="32dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:background="@color/bg_orange" />

        <TextView
            android:id="@+id/Frag_Payment_Total_Price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:background="@drawable/bg_button"
            android:backgroundTint="@color/bg_orange"
            android:fontFamily="sans-serif-light"
            android:padding="12dp"
            android:text="Total: R$ 0.00"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold"
            tools:ignore="HardcodedText" />

        <RadioGroup
            android:id="@+id/Frag_Payment_CheckGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/Frag_Payment_AVista"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:drawableStart="@drawable/ic_pay1"
                android:drawablePadding="12dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/vista"
                android:textColor="@color/bg_orange"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/Frag_Payment_CardDebit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_pay2"
                android:drawablePadding="12dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/cart_o_de_d_bito"
                android:textColor="@color/bg_orange"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/Frag_Payment_CardCredit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_pay2"
                android:drawablePadding="12dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/cart_o_de_cr_dito"
                android:textColor="@color/bg_orange"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_pay3"
                android:drawablePadding="12dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/pix"
                android:textColor="@color/bg_orange"
                android:textSize="18sp"
                android:textStyle="bold" />
        </RadioGroup>

        <LinearLayout
            android:id="@+id/Frag_Delivery_Layout_Card"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/Frag_Delivery_Endereco_Rua"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginBottom="8dp"
                android:autofillHints="true"
                android:backgroundTint="@color/bg_orange"
                android:drawablePadding="12dp"
                android:fontFamily="sans-serif-light"
                android:hint="@string/n_mero_do_cart_o"
                android:inputType="number"
                android:lines="1"
                android:maxLength="32"
                android:textColor="@color/bg_orange"
                android:textColorHint="#8F8F8F"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/Frag_Delivery_Endereco_Numero"
                    android:layout_width="0dp"
                    android:layout_height="44dp"
                    android:layout_marginBottom="8dp"
                    android:layout_weight="1"
                    android:autofillHints="true"
                    android:backgroundTint="@color/bg_orange"
                    android:drawablePadding="12dp"
                    android:fontFamily="sans-serif-light"
                    android:hint="@string/m_s"
                    android:inputType="number"
                    android:lines="1"
                    android:maxLength="2"
                    android:textColor="@color/bg_orange"
                    android:textColorHint="#8F8F8F"
                    android:textSize="18sp" />

                <EditText

                    android:id="@+id/Frag_Delivery_Endereco_Bairro"
                    android:layout_width="0dp"
                    android:layout_height="44dp"
                    android:layout_marginBottom="8dp"
                    android:layout_weight="1"
                    android:autofillHints="true"
                    android:backgroundTint="@color/bg_orange"
                    android:drawablePadding="12dp"
                    android:fontFamily="sans-serif-light"
                    android:hint="@string/ano"
                    android:inputType="number"
                    android:lines="1"
                    android:maxLength="4"
                    android:textColor="@color/bg_orange"
                    android:textColorHint="#8F8F8F"
                    android:textSize="18sp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/Frag_Delivery_Endereco_CEP"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="44dp"
                    android:layout_marginBottom="8dp"
                    android:autofillHints="true"
                    android:backgroundTint="@color/bg_orange"
                    android:fontFamily="sans-serif-light"
                    android:hint="@string/cpf"
                    android:inputType="number"
                    android:lines="1"
                    android:maxLength="11"
                    android:textColor="@color/bg_orange"
                    android:textColorHint="#8F8F8F"
                    android:textSize="18sp" />

                <EditText

                    android:layout_weight="1"
                    android:id="@+id/Frag_Delivery_Endereco_Cidade"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:layout_marginBottom="8dp"
                    android:autofillHints="true"
                    android:backgroundTint="@color/bg_orange"
                    android:fontFamily="sans-serif-light"
                    android:hint="@string/n_verificador"
                    android:inputType="textPersonName"
                    android:lines="1"
                    android:maxLength="32"
                    android:textColor="@color/bg_orange"
                    android:textColorHint="#8F8F8F"
                    android:textSize="18sp" />

            </LinearLayout>




        </LinearLayout>

        <LinearLayout
            android:id="@+id/Frag_Delivery_Layout_Pix"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                android:src="@mipmap/bg_pix"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_button_orange"
                android:drawableEnd="@drawable/ic_copy"
                android:fontFamily="sans-serif-black"
                android:paddingStart="44dp"
                android:paddingEnd="18dp"
                android:text="@string/copiar_chave_pix"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:orientation="vertical">

            <Button
                android:id="@+id/Frag_Payment_NextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_button_orange"
                android:drawableEnd="@drawable/ic_done"
                android:fontFamily="sans-serif-black"
                android:paddingStart="44dp"
                android:paddingEnd="18dp"
                android:text="@string/concluir_pedido"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</FrameLayout>

