<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Comanda_item_config_main"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_viewpager"
    android:orientation="vertical"
    android:padding="12dp">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="4dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/detalhes_do_pedido"
        android:textAlignment="center"
        android:textColor="@color/bg_orange"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/Comanda_item_config_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="4dp"
        android:fontFamily="sans-serif-light"
        android:textAlignment="center"
        android:textColor="@color/bg_orange"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/Comanda_item_config_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="4dp"
        android:fontFamily="sans-serif-light"
        android:textAlignment="center"
        android:textColor="@color/bg_orange"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="12dp"
        android:background="@color/bg_orange"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/Comanda_item_config_minus"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button_orange_left"
            android:fontFamily="sans-serif-black"
            android:text="@string/minus"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Comanda_item_config_count"
                android:layout_width="match_parent"
                android:layout_height="26dp"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:textAlignment="center"
                android:textColor="@color/bg_orange"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="14dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/quantidade"
                android:textAlignment="center"
                android:textColor="@color/bg_orange"
                android:textSize="11sp" />

        </LinearLayout>


        <Button
            android:id="@+id/Comanda_item_config_plus"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button_orange_right"
            android:fontFamily="sans-serif-black"
            android:text="@string/plus"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />

    </LinearLayout>

    <Button
        android:id="@+id/Comanda_item_config_delete"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/bg_button_orange"
        android:drawableEnd="@drawable/ic_delete"
        android:fontFamily="sans-serif-black"
        android:paddingStart="44dp"
        android:paddingEnd="18dp"
        android:text="@string/excluir_tem"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <Button
        android:id="@+id/Comanda_item_config_confirm"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/bg_button_orange"
        android:drawableEnd="@drawable/ic_done"
        android:fontFamily="sans-serif-black"
        android:paddingStart="44dp"
        android:paddingEnd="18dp"
        android:text="@string/concluir"
        android:textColor="@color/white"
        android:textStyle="bold" />


</LinearLayout>